manifests/deployment.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: laxuanlinhwebsocketchat 
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: laxuanlinhwebsocketchat 
    spec:
      containers:
        - name: laxuanlinhwebsocketchat 
          image: laxuanlinhregistry.azurecr.io/laxuanlinhwebsocketchat:11
          ports:
          - containerPort: 8080
