manifests/deployment-service.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: laxuanlinhwebsocketchat 
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: laxuanlinhwebsocketchat 
    spec:
      containers:
        - name: laxuanlinhwebsocketchat 
          image: laxuanlinhregistry.azurecr.io/laxuanlinhwebsocketchat
          imagePullSecrets:
          - name: regcred
          ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: laxuanlinhwebsocketchat
spec:
  type: LoadBalancer
  ports:
  - port: 8080
  selector:
    app: laxuanlinhwebsocketchat
---
