manifests/green-deployment-service.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: websocket-deployment-#{Build.BuildId}#
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: laxuanlinhwebsocketchat-#{Build.BuildId}#
    spec:
      containers:
        - name: laxuanlinhwebsocketchat 
          image: botbotregistrystagingsea.azurecr.io/laxuanlinh/websocket_chat:#{Build.BuildId}#
          ports:
          - containerPort: 8080
      imagePullSecrets:
      - name: azdev-sa-702dbb-token-lqwws
---
apiVersion: v1
kind: Service
metadata:
  name: service-#{Build.BuildId}#-green
spec:
  type: LoadBalancer
  ports:
  - port: 8080
  selector:
    app: laxuanlinhwebsocketchat-#{Build.BuildId}#
---
