manifests/green-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
  name: canary-websocket-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: service-#{Build.BuildId}#-green
          servicePort: 8080
        path: /websocket
