manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: websocket-ingress
  labels:
    app: websocket-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    http:
      paths:
      - backend:
          serviceName: laxuanlinhwebsocketchat
          servicePort: 8080
      path: /websocket
